--- a/SchoolSeatMapper/SchoolSeatMapper.csproj
+++ b/SchoolSeatMapper/SchoolSeatMapper.csproj
@@ -2,17 +2,29 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <FileVersion>0.1.5.0</FileVersion>
     <AssemblyVersion>0.1.5.0</AssemblyVersion>
+    <ApplicationIcon>Resources\Main.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Main.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autoupdater.NET.Official" Version="1.8.4" />
+    <PackageReference Include="ClosedXML" Version="0.102.1" />
     <PackageReference Include="WPF-UI" Version="3.0.0-preview.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\Main.ico">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
