--- a/SchoolSeatMapper/SchoolSeatMapper.csproj
+++ b/SchoolSeatMapper/SchoolSeatMapper.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <FileVersion>0.9.0.0</FileVersion>
@@ -18,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Autoupdater.NET.Official" Version="1.8.4" />
     <PackageReference Include="ClosedXML" Version="0.102.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="WPF-UI" Version="3.0.0-preview.13" />
   </ItemGroup>
 
